2015-05-15  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-chkp.h (chkp_wrap_function): New.
	* ipa-chkp.c (chkp_wrap_function): Remove 'static'.
	(chkp_wrap_function_name): New.
	(chkp_build_instrumented_fndecl): Use chkp_wrap_function_name
	to get wrapper name.
	* lto-cgraph.c: Include ipa-chkp.h.
	(input_cgraph_1): Avoid alias chain for wrappers.

2015-05-15  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR middle-end/66134
	* tree-chkp.c (chkp_get_orginal_bounds_for_abnormal_copy): New.
	(chkp_maybe_copy_and_register_bounds): Don't copy abnormal copy.

2015-05-15  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.h (AARCH64_TUNE_SLOWMUL): Delete.
	(AARCH64_FL_SLOWMUL): Delete.
	(AARCH64_FL_CRC): Redefine to 1<<3.
	(AARCH64_FL_USE_FMA_STEERING_PASS): Redefine to 1<<4.

2015-05-15  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/arm/arm.h (LOGICAL_OP_NON_SHORT_CIRCUIT): Add appropriate
	casting.

2015-05-15  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.md (extendqidi2): Use general_operand
	instead of some_operand for operand[1] predicate.
	(extendhidi2): Ditto.
	(cbranchdi4): Use general_operand instead of some_operand
	for operand[1] and operands[2] predicates.
	(cstoredi4): Ditto.
	* config/alpha/predicates.md (some_operand): Remove unused predicate.
	(some_ni_operand): Ditto.

2015-05-15  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_extract_integer): Do not handle
	CONST_WIDE_INT and CONST_DOUBLE.  Assert CONST_INT_P (x).
	(alpha_legitimate_constant_p) <case CONST_WIDE_INT>: Check high and
	low part of the constant using alpha_emit_set_const_1.
	(alpha_expand_mov): Do not handle CONST_WIDE_INT and CONST_DOUBLE.

2015-05-14  Rohit Arul Raj  <rohitrulraj@freescale.com>

	* varasm.c (output_constant_pool_1): Pass down alignment from
	constant pool entry's descriptor to output_constant_pool_2.
	(output_object_block): Add comment prior to call to
	output_constant_pool_1.
